tests/codegen/errors/codegen/codegen/operator.not.arity/atom.menu.error.codegen.operator.not.arity.006/menu-codegen-operator.not.arity-006.mon
;; TEST-ID: tests.codegen.menu.errors.codegen.operator.not.arity.006
;; TEST-TIER: known-fail
;; TEST-STATUS: quarantined-baseline-2026-06-15
;; TEST-KNOWN-FAILURE: diagnostic-mismatch
;; TEST-SECTION: codegen
;; TEST-CATEGORY: errors
;; TEST-SUBSET: codegen/operator.not.arity
;; TEST-MENU: errors/codegen/operator.not.arity/atom.menu.error.codegen.operator.not.arity.006
;; TEST-MENU-PATH: codegen/errors/codegen/operator.not.arity/atom.menu.error.codegen.operator.not.arity.006
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.error-menu
;; TEST-PURPOSE: Pin codegen diagnostic: not expects
;; TEST-ATOM: atom.menu.error.codegen.operator.not.arity.006
;; TEST-CODEGEN-ATOM: atom.menu.error.codegen.operator.not.arity.006
;; TEST-ATOM-LEAF: atom.menu.error.codegen.operator.not.arity.006
;; TEST-QUALITY: menu-error-diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-ERROR-STAGE: codegen
;; TEST-ERROR-FAMILY: operator.not.arity
;; TEST-ERROR-MESSAGE: not expects
;; TEST-ERROR-SOURCE: codegen.c
;; TEST-ERROR-PATH: codegen.c:diagnostic
;; TEST-CODEGEN-PATH: diagnostic.codegen.operator.not.arity
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: codegen
;; TEST-TAG: menu
;; TEST-COVERAGE: codegen.c diagnostic not expects
;; TEST-USES-ATOM: atom.menu.error.codegen.operator.not.arity.006
;; TEST-USES-ATOM: atom.error.codegen
;; TEST-USES-ATOM: atom.error.codegen.operator.not.arity
;; TEST-USES-ATOM: atom.codegen.error
;; TEST-DEPENDS-ON: atom.codegen.expr.dispatch
;; TEST-REFINES: atom.error.codegen
;; TEST-REFINES: atom.error.codegen.operator.not.arity
;; TEST-REFINES: atom.codegen.error
;; TEST-RELATED: atom.codegen.error.menu
;; TEST-CLI-TARGET: codegen errors codegen codegen

(module Main)
(show (not True False))
;; codegen menu variant 6
